2008-07-21  Martin Maechler  <maechler@stat.math.ethz.ch>

	* src/cs_utils.c (Matrix_as_cs): add check_Udiag switch
	* src/cs_utils.h (AS_CSP & AS_CSP__): two versions
	* src/dtCMatrix.c (dtCMatrix_sparse_solve): no longer needs
	diagU2N().
	
	
	* R/diagMatrix.R (.sparseDiagonal): new utility, used in "old"
	.spDiagonal() and new .trDiagonal().

	* R/dtCMatrix.R (solve): make use of .trDiagonal()

2008-07-19  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/Auxiliaries.R (dimNamesCheck): fix very long standing buglet,
	stumbled upon by Michael H.

	* tests/validObj.R: testing the bug-fix

	* src/chm_common.h (AS_CHM_SP__, AS_CHM_TR__): the non-diagU2N
	versions.

	* src/chm_common.c (as_cholmod_sparse, as_cholmod_triplet): new
	boolean argument 'check_Udiag' (formerly implicitly was FALSE).

	* src/Csparse.c (Csparse_Csparse_prod, ...): etc: use the new
	  AS_CHM_SP() which includes diagU2N.

	* inst/include/Matrix_stubs.c (M_as_cholmod_sparse): similarly
	adapt to 3 arguments.

2008-07-17  Douglas Bates <bates@stat.wisc.edu>

	* [r2217] R/dtCMatrix.R, src/dtCMatrix.c, src/dtCMatrix.h, src/init.c:
	  Replace dtCMatrix_solve by more general dtCMatrix_sparse_solve and add
	  new solve method
	* [r2216] src/cs_utils.c: Utility csp_eye in case we want to fold
	  Csparse_diagU2N functionality into Matrix_as_cs

2008-07-17  Martin Maechler  <maechler@stat.math.ethz.ch>

	* [r2215] inst/doc/factor2sparse.Rnw: revive a year-old unfinished
	  vignette
	* [r2214] R/AllGeneric.R: cosmetic
	* [r2213] man/image-methods.Rd: typo ("non-number" :-\ )

2008-07-16  Douglas Bates <bates@stat.wisc.edu>

	* [r2212] R/sparseMatrix.R: fac2sparse gets a drop.unused.levels
	  argument with default TRUE
	* [r2211] inst/include/Matrix.h, inst/include/Matrix_stubs.c: Export
	  Csparse_diagU2N
	* [r2210] R/dtCMatrix.R, man/dtCMatrix-class.Rd, src/dtCMatrix.c,
	  src/dtCMatrix.h, src/init.c: Remove vestigial methods based on the