@@ -16,7 +16,7 @@ extern cholmod_common c;
 /* NOTE: Versions of these are *EXPORTED* via ../inst/include/Matrix.h
  * ----  and used e.g., in the lme4 package
  */
-CHM_SP as_cholmod_sparse (CHM_SP ans, SEXP x, Rboolean check_Udiag);
+CHM_SP as_cholmod_sparse (CHM_SP ans, SEXP x, Rboolean check_Udiag, Rboolean sort_in_place);
 CHM_TR as_cholmod_triplet(CHM_TR ans, SEXP x, Rboolean check_Udiag);
 CHM_DN as_cholmod_dense  (CHM_DN ans, SEXP x);
 CHM_DN as_cholmod_x_dense(CHM_DN ans, SEXP x);
@@ -25,14 +25,16 @@ CHM_FR as_cholmod_factor (CHM_FR ans, SEXP x);
 
 #define AS_CHM_DN(x) as_cholmod_dense  ((CHM_DN)alloca(sizeof(cholmod_dense)), x )
 #define AS_CHM_FR(x) as_cholmod_factor ((CHM_FR)alloca(sizeof(cholmod_factor)), x )
-#define AS_CHM_SP(x) as_cholmod_sparse ((CHM_SP)alloca(sizeof(cholmod_sparse)), x, TRUE)
+#define AS_CHM_SP(x) as_cholmod_sparse ((CHM_SP)alloca(sizeof(cholmod_sparse)), x, TRUE, FALSE)
 #define AS_CHM_TR(x) as_cholmod_triplet((CHM_TR)alloca(sizeof(cholmod_triplet)),x, TRUE)
 /* the non-diagU2N-checking versions : */
-#define AS_CHM_SP__(x) as_cholmod_sparse ((CHM_SP)alloca(sizeof(cholmod_sparse)), x, FALSE)
+#define AS_CHM_SP__(x) as_cholmod_sparse ((CHM_SP)alloca(sizeof(cholmod_sparse)), x, FALSE, FALSE)
 #define AS_CHM_TR__(x) as_cholmod_triplet((CHM_TR)alloca(sizeof(cholmod_triplet)), x, FALSE)
 
 
 #define N_AS_CHM_DN(x,nr,nc) M_numeric_as_chm_dense((CHM_DN)alloca(sizeof(cholmod_dense)), x , nr, nc )
+
+Rboolean check_sorted_chm(CHM_SP A);
 
 int R_cholmod_start(CHM_CM Common);
 void R_cholmod_error(int status, char *file, int line, char *message);
